[package]
name = "ecdsa0-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ecdsa0-methods = { path = "methods" }
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
risc0-zkvm = { git = "https://github.com/l2iterative/risc0/", branch="no-rust-runtime-for-host" }
serde = "1.0"
bytemuck = "1.14.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
